--- a/_posts/2019-04-30-test-post.md
+++ b/_posts/2019-04-30-test-post.md
@@ -2,5 +2,6 @@
 layout: post
 title: "first post!"
 date: 2019-04-30
+tags: meta
 ---
 interestingly, I only had to change the year from this tutorial template for date accuracy
