first google doc link for comment-ability

--- a/_posts/2021-03-23-writing.md
+++ b/_posts/2021-03-23-writing.md
@@ -40,3 +40,11 @@ As DFW also astutely notes, “somebody who’s writing, has part of their motiv
 While I anticipate these writing exercises to mainly benefit myself, there’s some small hope that it could be a source of solidarity. I’ve recently finished a book called “Discovering: Inventing and Solving Problems at the Frontiers of Scientific Knowledge” (Root-Bernstein), and on the last page, it said, “If what we’ve said and done here gives such a person the courage to do science on his own and in his own way--you know I mean her, too--then we have succeeded in producing something important” (428). Unlike other independently-thinking people I know, I’m often much more uncertain and unconfident. 
 
 Another reason I picked up the book “Although of course you end up becoming yourself” was because I like the title. It reads like a reassurance—_you’ll find your way, eventually_. 
+
+&nbsp;
+&nbsp;
+&nbsp;
+
+---
+
+_comments solicited, [kludgey comment-able form here](https://docs.google.com/document/d/1qpSEuLDHJtHC38dWwjdwWorMSu0OhHnOf1xdrBf7T3Q/edit?usp=sharing)._
