updating analytics and frontpage

--- a/_posts/2021-03-23-writing.md
+++ b/_posts/2021-03-23-writing.md
@@ -3,6 +3,7 @@ layout: page
 title: on starting to write
 permalink: /poop/starting
 date: 2023/07/20
+published: true
 ---
 
 _[written 2021/03/23]_
