--- a/_posts/2022-10-23-gently.md
+++ b/_posts/2022-10-23-gently.md
@@ -1,7 +1,9 @@
 ---
-layout: page
+layout: post
 title: Highlights from "Dirk Gently's Holistic Detective Agency"
 date: 2022/10/19
+permalink: /poop/gently
+published: true
 ---
 
  <img src="../documents/a_trace_of_the_true_self_exists_in_the_false_self.jpeg" title="'a trace of the true self exists in the false self'" style="width:600px;height:400px;float: right;"> 
