adding shared norms

--- a/_posts/2022-10-23-gently.md
+++ b/_posts/2022-10-23-gently.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Highlights from "Dirk Gently's Holistic Detective Agency"
+title: highlights from "Dirk Gently's Holistic Detective Agency"
 date: 2022/10/19
 permalink: /poop/gently
 published: true
