--- a/_posts/2022-11-09-cooking.md
+++ b/_posts/2022-11-09-cooking.md
@@ -1,6 +1,9 @@
 ---
 layout: page
 title: efficient* ways to feed yourself
+date: 2022/11/09
+permalink: /poop/cooking
+published: false
 ---
 
 with microwaves:
