--- a/_posts/2023-08-11-lincoln.md
+++ b/_posts/2023-08-11-lincoln.md
@@ -6,7 +6,7 @@ date: 2023/08/11
 published: true
 ---
 
-I picked up “Team of Rivals” browsing through some shelves one night, in want of a compelling book. It was not completely random. I might’ve been motivated to read a biography when I was writing ‘narratives’, and realizing that biographies would probably similarly inspire one on a narrative of ‘how to be’. And Lincoln in particular has a connotational halo in my head of someone who is of great moral character, a potential reference point for the question of ‘how to be’. I was not wrong. Also this title was primed because it has been on my book list since 2016/03/09 (I have self-indulgent, unnecessarily-detailed documentation), probably from a cardiothoracic surgeon named Nat (while it took more than seven years, the recommendation was not for nought).
+I picked up “Team of Rivals” browsing through some shelves one night, in want of a compelling book. It was not completely random. I might’ve been motivated to read a biography when I was writing [‘the practicality of frivolous stories’](narratives), and realizing that biographies would probably similarly inspire one on a narrative of ‘how to be’. And Lincoln in particular has a connotational halo in my head of someone who is of great moral character, a potential reference point for the question of ‘how to be’. I was not wrong. Also this title was primed because it has been on my book list since 2016/03/09 (I have self-indulgent, unnecessarily-detailed documentation), probably from a cardiothoracic surgeon named Nat (while it took more than seven years, the recommendation was not for nought).
 
 I was surprised to find that “Team of Rivals” has many elements of an adventure story, with an underdog protagonist with humble beginnings, being scrappy and traveling long distances to make something of themself, and getting caught up in a war for an idealistic cause. I also associate ‘world building’ with fiction, so I was surprised to notice that here too has elements of world building that contextualize these characters. Though one thing “Team of Rivals” more effectively communicates is the prevalence of pestilence; the deaths of family and friends due to epidemics almost seem routine – I am now more salient of the impact of 20th century medicine. Otherwise, this is just a smaller, quaint world, a setting adjacent to adventure/steampunk stories, where there is greater sincerity in politics, more public involvement in politics, more willingness to stuff people on mattresses on pool tables whenever there is a large event, more bed sharing in general (there seems to be not enough beds), public accessibility to the White House and the President, more intimate male relationships where they write each other ardent letters of appreciation, and more letter writing in general (at least among our cast of characters). In the way I imagine old people reminisce about the times they memorized their loved ones’ phone numbers, I reminisce about the times where you could recognize your friends’ and families’ handwriting; there’s a certain romanticism to it. But at least it’s not all you have left of them. 
 
@@ -37,7 +37,7 @@ Even rarer still, I think, is his ‘profound and elevated sense of ambition’:
 
 All these traits, his ambition, his idealism, his competence, his empathy, his magnanimity, additionally compounded by Lincoln’s lively sense of humor (Lincoln’s witty quip in his own dream: ‘The Lord prefers common-looking people, that is the reason he makes so many of them’ (593)) and optimism (“allow by-gones to be by-gones, and to look to the present and future only” (272)), come together to depict such a great figure that, by the time Edward Stanton says, ‘Now he belongs to the ages’ (743) upon Lincoln’s death, you can viscerally feel the loss. 
 
-It’s okay if it takes four score and seven years to get around to reading it. I don’t regret not reading it earlier. But here is a recommendation, just in case you find yourself in want of a compelling book, of both compelling narrative and a particularly compelling character. 
+It’s okay if it takes ~~four score and~~ seven years to get around to reading it. I don’t regret not reading it earlier. But here is a recommendation, just in case you find yourself in want of a compelling book, of both compelling narrative and a particularly compelling character. 
 
 
 
