updating booklist and stackrank

--- a/_posts/2023-10-22-lsd.md
+++ b/_posts/2023-10-22-lsd.md
@@ -3,9 +3,11 @@ layout: post
 title: a hypothesis about lsd
 permalink: /poop/lsd
 date: 2023/10/22
-date_updated: 2023/11/27
-published: false
+date_updated: 2023/12/07
+published: true
 ---
+
+_generalizations from n=1_
 
 For some reason, recreational drugs tend to not work as advertised on me. 
 
@@ -17,14 +19,17 @@ Alcohol probably skews towards a hardware difference. Alcohol is skewed towards 
 
 Caffeine I'm not as sure of -- it does not seem to help me concentrate/focus better. I drink it for the taste: I like that it's hot, a strong bitter flavor that is nice to sip slowly as I do work (sweet drinks I tend to down; cold liquids make me distractingly cold and uncomfortable, and hot water is boring). Drinking too much caffeine can make me jittery and unable to sleep though, so it's similar to alcohol in that its neegative side effects are more salient to me, with little to no observed positive effects.
 
-LSD is commonly advertised to be life-changing, inspirational, etc. As someone generally interested in perspective shifts, I was intrigued.
+LSD is commonly advertised to be life-changing, inspirational, etc. As someone generally interested in perspective shifts, I was intrigued. And I guess it was interesting, mostly on a meta-level. I took it with a close friend who also enjoys meta-analyzing things, and our sitter, who has sat others on acid-trips, was baffled that we were still doing it on acid. Apparently it's not a thing? 
 
-I ended taking twice the standard dose because it did not seem to be doing much with one. I thought the visual hallucinations/patterns were boring; it's like watching one of those 90's screensavers. 
+I ended taking twice the standard dose because it did not seem to be doing much with one. 
 
+Some takes that I have not seen described elsewhere:
+- I thought the visual hallucinations/patterns were quickly boring; it's like watching one of those 90's screensavers.
+- I suspect that LSD is associated with insight because it lowers your resolution of thought. And so instead getting caught up with the details ('this makes me feel frustrated, anxious, hopeful, etc', various multidimensional considerations), you round it ('do I like it or not, yes/no'), and tada, a clear answer! 
+- I am not sure how to explain this without sounding pretentious, but I think I also understand people make more sense now -- I think they're normally operating on larger thought 'blocks'. Because my resolution of thought decreased, my mind would jump to conclusions that I've been previously baffled by when I saw it in others ('how did they get all the way over there??'). But it's kind of like automated TV tropes, and social narrative arcs are completed for you. It's interesting that there was this separate 'curator' in my head that was working overtime to try to correct my thoughts to be more precise and nuanced (trying get to 8.8 when your thought blocks are integers -- 'it's more than 8!','so 9?','no, less than 9!','...8?, etc). 
+- I can see why it's something to do with friends because you can be more suggestible -- you are on automatic at longer intervals
 
-I suspect that LSD is associated with insight because it lowers your resolution of thought. And so instead getting caught up with the details, you round it, and 
-
-I can see why it's something to do with friends because you can be more suggestible -- 
+I'm am not confident this is the best interpretation of my experience, but my friend who likes meta-analyzing said that his experience agreed with my model of it. So, here it is on the internet, in case someone has a similar experience and want solidarity. 
 
 
 
