--- a/_posts/2023-10-22-lsd.md
+++ b/_posts/2023-10-22-lsd.md
@@ -11,11 +11,11 @@ _generalizations from n=1_
 
 For some reason, recreational drugs tend to not work as advertised on me. 
 
-But I also am able to do things sober that people take drugs for, like stay up late, introspect, feel socially relaxed, etc. When I do take drugs, it's mostly for the curiosity for how it changes how you think; besides that I mostly find them uncomfortable. 
+But I also am able to do things sober that people take drugs for, like stay up late, introspect, feel socially relaxed, etc. When I do take drugs, it's mostly for the curiosity for how it changes how you think -- besides that I find no other upside. This is apparently odd. 
 
 I wonder how much is physiological (like hardware, i.e. how many drug-relevant receptors I have) versus psychological (like software i.e. apparently non-stubborn people do better with dementia because they're more amenable to having their reality corrected).
 
-Alcohol probably skews towards a hardware difference. Alcohol is skewed towards the side effects with little to no fun effects. I suspect I have efficient alcohol to aldehyde (causes the unwanted side effects) conversion, and slow aldehyde to acetic acid (non-toxic end product) conversion; I can get a headache from a shot of beer and can really only get tipsy (which mostly feels like being tired) with liquor/high alcohol percentage. I might as well get sleepy and loopy withh no side effects.
+Alcohol probably skews towards a hardware difference. Alcohol is skewed towards the side effects with little to no fun effects. I suspect I have efficient alcohol to aldehyde (causes the unwanted side effects) conversion, and slow aldehyde to acetic acid (non-toxic end product) conversion; I can get a headache from a shot of beer and can really only get tipsy (which mostly feels like being tired) with liquor/high alcohol percentage. I might as well get sleepy and loopy withh no side effects. [Edit 2023/12/21: I can apparently also get side effects with 'non-alcoholic alcochol' (<0.5% alcohol)]
 
 Caffeine I'm not as sure of -- it does not seem to help me concentrate/focus better. I drink it for the taste: I like that it's hot, a strong bitter flavor that is nice to sip slowly as I do work (sweet drinks I tend to down; cold liquids make me distractingly cold and uncomfortable, and hot water is boring). Drinking too much caffeine can make me jittery and unable to sleep though, so it's similar to alcohol in that its neegative side effects are more salient to me, with little to no observed positive effects.
 
@@ -27,7 +27,10 @@ Some takes that I have not seen described elsewhere:
 - I thought the visual hallucinations/patterns were quickly boring; it's like watching one of those 90's screensavers.
 - I suspect that LSD is associated with insight because it lowers your resolution of thought. And so instead getting caught up with the details ('this makes me feel frustrated, anxious, hopeful, etc', various multidimensional considerations), you round it ('do I like it or not, yes/no'), and tada, a clear answer! 
 - I am not sure how to explain this without sounding pretentious, but I think I also understand people make more sense now -- I think they're normally operating on larger thought 'blocks'. Because my resolution of thought decreased, my mind would jump to conclusions that I've been previously baffled by when I saw it in others ('how did they get all the way over there??'). But it's kind of like automated TV tropes, and social narrative arcs are completed for you. It's interesting that there was this separate 'curator' in my head that was working overtime to try to correct my thoughts to be more precise and nuanced (trying get to 8.8 when your thought blocks are integers -- 'it's more than 8!','so 9?','no, less than 9!','...8?, etc). 
-- I can see why it's something to do with friends because you can be more suggestible -- you are on automatic at longer intervals
+- relatedly, social interactions seem more automatically 'colored' with emotion -- I got the sense my friend was annoyed at me even though historically I've never gotten that impression and with time, I realized that was an incorrect interpretation. I wonder if emotion is clearer with larger thought blocks because they implicitly convey a narrative arc, which is harder to convey with smaller thought blocks, f it is 'chopped up' too much. 
+- I can see why it's something to do with friends because you can be more suggestible -- you are on automatic at longer intervals.
+
+In summary, LSD seems to decrease your resolution of thought, so that a stimulus tends to trigger a longer automated prediction stream. This goes with fewer opportunites for control/decisions, and a regression towards more normal behavior (the possibility space is smaller if there are fewer degrees of freedom). 
 
 I'm am not confident this is the best interpretation of my experience, but my friend who likes meta-analyzing said that his experience agreed with my model of it. So, here it is on the internet, in case someone has a similar experience and want solidarity. 
 
