--- a/_posts/2024-01-25-money.md
+++ b/_posts/2024-01-25-money.md
@@ -1,28 +1,42 @@
 ---
 layout: post
-title: watching "Margin Call", a review of 'The Psychology of Money', and
+title: watching "Margin Call", reading 'The Psychology of Money', and still not understanding
 permalink: /poop/money
 date: 2024/01/25
-date_updated: 2024/01/25
-published: false
+date_updated: 2024/02/20
+published: true
 ---
 
-I recently watched "Margin Call" with friends, and it's kind of like an action movie in that it's a good ride but you're not supposed to scrutinize the content too closely. I tried, and I was reminded of how I guess I've never quite internalized why people don't make the same financial decisions as me -- i.e. I would have 'fuck you' money so that I could quit if I were faced with such a moral dilemma (and this should be easy to save for given their incomes), and so the whole drama/tension that this film is largely based on would be escapable -- you win by being able to not play. But apparently it's not so simple.  
 
-In response to my confusion, H recommended me 'The Psychology of Money' by Morgan Housler, who defines the psychology of money as the soft skill of how someone manages their finances. Sounds promising. It separates the ability to earn money and the ability to maintain money as separate skills, and mostly focuses on the latter.
+I recently watched "Margin Call" with friends, and it's kind of like an action movie in that it's a good ride but it's less fun if you try to scrutinize the content too closely. But I fell into the trap and did try, and I was reminded of how I guess I've never quite internalized why people don't make the same financial decisions as me -- i.e. I would have 'fuck you' money so that I could quit if I were faced with such a moral dilemma (and this should be easy to save for given their incomes), and so the whole drama/tension that this film is largely based on would be escapable -- you win by being able to not play. Because I find it rather stressful to think about, I was inclined to consider it solved there. But H made a good point, that to stop here is more dismissive than curious, and the human tendencies that drive this drama is not uncommon -- so _why_ is it that so many people approach their finances so differently?
 
-The first chapter is about how people's experiences (culture, socioeconomics, economic current events) shape their psychology. 
+...
 
-I think the concept of tails were better explored and internalized in Antifragile. 
+In response to my confusion, H recommended me 'The Psychology of Money' by Morgan Housel, who defines the psychology of money as the soft skill of how someone manages their finances. Sounds promising. 
 
+...it was rather disappointing. Probably because I expected it help me understand why people do what they do -- but it really didn't.
 
-But then why do people with quite different background converge to a similar answer to how to manage their money? I'd say it's part 'childhood experience', but I think he does not explore the aspect of 'values' enough. Perhaps a more useful way to understand finance bros and my friends and I are that they value status more than freedom. At least through actions. 
+The first chapter is titled 'No one's crazy', about how people's experiences (culture, socioeconomics, economic current events) shape their psychology around money. I have no qualms here; I already think this is true in general (people make sense given their processing style and experiences). But then it kind of stops there and never goes deeper in this direction for the rest of the book. 'People are shaped by current events and culture, like depressions, interest rates, the economy of your country, etc' -- insightful, bruh. 
 
-This is stackranking again -- it's not like I think status doesn't matter nor would finance bros not value freedom. It's just that their spending habits optimize moreso for status than freedom. 
+So people make sense according to their circumstances -- but _what are those circucmstsances?_ He makes a useful distinction between the ability to earn money and the ability to maintain money -- _why_ are some people good at one, neither, or both? He mostly focuses on the latter in this book.  Why are some people better at handling their finances than others? It describes human tendencies, but never gets into the weeds of what pushes people into certain parts of the distribution. (maybe this is why we have financial illiteracy -- it seems we don't know how to intervene.)
 
-independent thinking and peer pressure.
-salience of local vs global/big picture optimization
+I wanted to know why people with high income don't put away 'fuck you money', why people don't save in general, why people seem to optimize for the timeframes that they do (optimal spending for the next week versus optimal spending for the next five years), why people aren't compelled to budget, etc. Money is very salient in our society, and I don't think I'm an especially neurotic/paranoid person, but taking financially protective measures seem much less common than I expect -- _why is that?_
 
+I suppose there are various aspects of the 'psychology of money' can entail, and it happened to not address the level I'm particularly interested (which is the better level). At least this is not as egregiously misleading as the book titled 'How to Change Your Mind' by Michael Pollan, which was not about healthy mental habits, but about psychedelics -- it's like thinking a book titled 'How to have a fit body' would be about good diet/exercise/lifestyle practices, and it instead largely talks about taking drugs.)
+
+Even so, the topics it does bring up has been better articulated elsewhere. For instace, it discusses the idea that in finance, events at the tails of the distribution can have outsized impact, which is a good point to try to internalize, but I think this is better explored and internalizable in "Antifragile" (Taleb). Perhaps I'm being too harsh and someone who encounters such concepts here first will have an okay time. 
+
+But then why do people with quite different background converge to a similar answer to how to manage their money? People close to me seem have a similar approach to it (I do not think I overtly selected for this though). I'd say it's part 'childhood experience', but I think he does not explore the aspect of 'values' enough. Perhaps a more useful way to understand differences between finance bros and my friends and I are that they value status more than freedom. At least through actions. This is stackranking again -- it's not like I think status doesn't matter nor would finance bros not value freedom. It's just that their spending habits optimize moreso for status than freedom. 
+
+...
+
+I learned a couple of years ago that it can be useful to understand and differentiate people by what they're motivated by, and I seem to be a slow learner, because while I am salient of this fact, I do not feel I am able to utilize it well. 
+
+I encountered a real life, puzzling example not long afterwards. I caught up with a friend over the phone, and she told me about her parents' financial situation, who're one million dollars in debt due to unfortunate business ventures. And there's also emotional attachment to their real estate portfolio, which they see as a symbol of success, even if would be better utilized in paying off their debt. How does this happen?
+
+Perhaps some remarks I've received are relevant and I'm cold and (literally) calculating (I suspect it's related to how my emotional landscape is a lot calmer/less spikey than the average person's), so much that I have trouble understanding the average person? (But my friends are nice and warm and seem to understand better).
+
+I currently do not have a satisfying conclusion (you may tell me if I am overlooking something simple and obvious, but be warned that I have misplaced my common sense). But as usual, I will leave this on backburner and maybe over the next decade(s), I will stumble across a more useful perspective ([it happens, sometimes](dll110.github/poop/god)). 
 
 
 
