--- a/_posts/2024-01-25-money.md
+++ b/_posts/2024-01-25-money.md
@@ -18,7 +18,7 @@ In response to my confusion, H recommended me 'The Psychology of Money' by Morga
 
 The first chapter is titled 'No one's crazy', about how people's experiences (culture, socioeconomics, economic current events) shape their psychology around money. I have no qualms here; I already think this is true in general (people make sense given their processing style and experiences). But then it kind of stops there and never goes deeper in this direction for the rest of the book. 'People are shaped by current events and culture, like depressions, interest rates, the economy of your country, etc' -- insightful, bruh. 
 
-So people make sense according to their circumstances -- but _what are those circucmstsances?_ He makes a useful distinction between the ability to earn money and the ability to maintain money -- _why_ are some people good at one, neither, or both? He mostly focuses on the latter in this book.  Why are some people better at handling their finances than others? It describes human tendencies, but never gets into the weeds of what pushes people into certain parts of the distribution. (maybe this is why we have financial illiteracy -- it seems we don't know how to intervene.)
+So people make sense according to their circumstances -- but _what are those circumstances?_ He makes a useful distinction between the ability to earn money and the ability to maintain money -- _why_ are some people good at one, neither, or both? He mostly focuses on the latter in this book.  Why are some people better at handling their finances than others? It describes human tendencies, but never gets into the weeds of what pushes people into certain parts of the distribution. (maybe this is why we have financial illiteracy -- it seems we don't know how to intervene.)
 
 I wanted to know why people with high income don't put away 'fuck you money', why people don't save in general, why people seem to optimize for the timeframes that they do (optimal spending for the next week versus optimal spending for the next five years), why people aren't compelled to budget, etc. Money is very salient in our society, and I don't think I'm an especially neurotic/paranoid person, but taking financially protective measures seem much less common than I expect -- _why is that?_
 
