--- a/_posts/2023-10-22-lsd.md
+++ b/_posts/2023-10-22-lsd.md
@@ -21,9 +21,9 @@ Caffeine I'm not as sure of -- it does not seem to help me concentrate/focus bet
 
 LSD is commonly advertised to be life-changing, inspirational, etc. As someone generally interested in perspective shifts, I was intrigued. And I guess it was interesting, mostly on a meta-level. I took it with a close friend who also enjoys meta-analyzing things, and our sitter, who has sat others on acid-trips, was baffled that we were still doing it on acid. Apparently it's not a thing? 
 
-I ended taking twice the standard dose because it did not seem to be doing much with one. 
+I ended taking 1.5x the standard dose because it did not seem to be doing much with one. 
 
-Some takes that I have not seen described elsewhere:
+Some takes that I have not seen described elsewhere (not that I've put much effort to look):
 - I thought the visual hallucinations/patterns were quickly boring; it's like watching one of those 90's screensavers.
 - I suspect that LSD is associated with insight because it lowers your resolution of thought. And so instead getting caught up with the details ('this makes me feel frustrated, anxious, hopeful, etc', various multidimensional considerations), you round it ('do I like it or not, yes/no'), and tada, a clear answer! 
 - I am not sure how to explain this without sounding pretentious, but I think I also understand people make more sense now -- I think they're normally operating on larger thought 'blocks'. Because my resolution of thought decreased, my mind would jump to conclusions that I've been previously baffled by when I saw it in others ('how did they get all the way over there??'). But it's kind of like automated TV tropes, and social narrative arcs are completed for you. It's interesting that there was this separate 'curator' in my head that was working overtime to try to correct my thoughts to be more precise and nuanced (trying get to 8.8 when your thought blocks are integers -- 'it's more than 8!','so 9?','no, less than 9!','...8?, etc). 
