--- a/_posts/2023-10-22-lsd.md
+++ b/_posts/2023-10-22-lsd.md
@@ -26,13 +26,13 @@ I ended taking 1.5x the standard dose because it did not seem to be doing much w
 Some takes that I have not seen described elsewhere (not that I've put much effort to look):
 - I thought the visual hallucinations/patterns were quickly boring; it's like watching one of those 90's screensavers.
 - I suspect that LSD is associated with insight because it lowers your resolution of thought. And so instead getting caught up with the details ('this makes me feel frustrated, anxious, hopeful, etc', various multidimensional considerations), you round it ('do I like it or not, yes/no'), and tada, a clear answer! 
-- I am not sure how to explain this without sounding pretentious, but I think I also understand people make more sense now -- I think they're normally operating on larger thought 'blocks'. Because my resolution of thought decreased, my mind would jump to conclusions that I've been previously baffled by when I saw it in others ('how did they get all the way over there??'). But it's kind of like automated TV tropes, and social narrative arcs are completed for you. It's interesting that there was this separate 'curator' in my head that was working overtime to try to correct my thoughts to be more precise and nuanced (trying get to 8.8 when your thought blocks are integers -- 'it's more than 8!','so 9?','no, less than 9!','...8?, etc). 
-- relatedly, social interactions seem more automatically 'colored' with emotion -- I got the sense my friend was annoyed at me even though historically I've never gotten that impression and with time, I realized that was an incorrect interpretation. I wonder if emotion is clearer with larger thought blocks because they implicitly convey a narrative arc, which is harder to convey with smaller thought blocks, f it is 'chopped up' too much. 
+- I am not sure how to explain this without sounding pretentious, but I think people make more sense now -- I think they're normally operating on larger thought 'blocks'. Because my resolution of thought decreased, my mind would jump to conclusions that I've been previously baffled by when I saw it in others ('how did they get all the way over there??'). But it's kind of like automated TV tropes, and social narrative arcs are completed for you. It's interesting that there was this separate 'curator' in my head that was working overtime to try to correct my thoughts to be more precise and nuanced (trying get to 8.8 when your thought blocks are integers -- 'it's more than 8!','so 9?','no, less than 9!','...8?, etc). 
+- relatedly, social interactions seem more automatically 'colored' with emotion -- I got the sense my friend was annoyed at me even though historically I've never gotten that impression and with time, I realized that was an incorrect interpretation. I wonder if emotion is clearer with larger thought blocks because they implicitly convey a narrative arc, which is harder to convey with smaller thought blocks, if it is 'chopped up' too much. 
 - I can see why it's something to do with friends because you can be more suggestible -- you are on automatic at longer intervals.
 
 In summary, LSD seems to decrease your resolution of thought, so that a stimulus tends to trigger a longer automated prediction stream. This goes with fewer opportunites for control/decisions, and a regression towards more normal behavior (the possibility space is smaller if there are fewer degrees of freedom). 
 
-I'm am not confident this is the best interpretation of my experience, but my friend who likes meta-analyzing said that his experience agreed with my model of it. So, here it is on the internet, in case someone has a similar experience and want solidarity. 
+I'm am not confident this is the best interpretation of my experience, but my friend who likes meta-analyzing said that his experience agreed with my model of it. So, here it is on the internet, in case someone has a similar experience and wants solidarity. 
 
 
 
