--- a/_posts/2023-12-01-love.md
+++ b/_posts/2023-12-01-love.md
@@ -19,7 +19,7 @@ In that sense, I've been surprisingly successful, by my own standards: I have a 
 
 In fact, I'm so good at friendships that my ex now thinks it's an upgrade (less stress). And I'm not sure how to not internalize that I'm fussy and difficult. I've tried to find attitudes over the years to make myself easier, to smooth out my rough edges. 
 
-Friendships are easier because you don't need to worry about idiosyncratic compatibilities (like if you find them physically attractive, cleanliness, etc), you can just evaluate them on ideals, like their strength of character. With this distance, I can wholeheartedly support them becoming whatever they want -- and I seem to do this well, I am characterized by friends as being unusually nonjudgmental and accepting. But this is not true for a romantic partner because they'll inevitably encounter my fussy idiosyncratic preferences, which I've been able to largely restrict, even from friends, but it is not 
+Friendships are easier because you don't need to worry about idiosyncratic compatibilities (like if you find them physically attractive, cleanliness, etc), you can just evaluate them on ideals, like their strength of character. With this distance, I can wholeheartedly support them becoming whatever they want -- and I seem to do this well, I am characterized by friends as being unusually nonjudgmental and accepting. But this is not true for a romantic partner because they'll inevitably encounter my fussy idiosyncratic preferences, which I've been able to largely restrict, even from friends, but it is not feasible in at the distance of a romantic relationship.
 
 I think there's a 80% probability that I end up unwed and alone. That's generally the trend of women that I find admirable on wikipedia. I think it could be a nice life to raise a kid with my friends, taking advantage of my strengths. Some people are polyamorous, and I guess I'm arguably platonically polyamorous. I desire to be romantically monogamous though. I want a best friend and not be lonely, to always have a default partner to pair up with in life's group projects/events. While everyone is most fearing their mortality, I most fear feeling alone. 
 
