--- a/_posts/2024-01-25-money.md
+++ b/_posts/2024-01-25-money.md
@@ -24,9 +24,9 @@ I wanted to know why people with high income don't put away 'fuck you money', wh
 
 I suppose there are various aspects of the 'psychology of money' can entail, and it happened to not address the level I'm particularly interested (which is the better level). At least this is not as egregiously misleading as the book titled 'How to Change Your Mind' by Michael Pollan, which was not about healthy mental habits, but about psychedelics -- it's like thinking a book titled 'How to have a fit body' would be about good diet/exercise/lifestyle practices, and it instead largely talks about taking drugs.)
 
-Even so, the topics it does bring up has been better articulated elsewhere. For instace, it discusses the idea that in finance, events at the tails of the distribution can have outsized impact, which is a good point to try to internalize, but I think this is better explored and internalizable in "Antifragile" (Taleb). Perhaps I'm being too harsh and someone who encounters such concepts here first will have an okay time. 
+Even so, the topics it does bring up has been better articulated elsewhere. For instance, it discusses the idea that in finance, events at the tails of the distribution can have outsized impact, which is a good point to try to internalize, but I think this is better explored and internalizable in "Antifragile" (Taleb). Perhaps I'm being too harsh and someone who encounters such concepts here first will have an okay time. 
 
-But then why do people with quite different background converge to a similar answer to how to manage their money? People close to me seem have a similar approach to it (I do not think I overtly selected for this though). I'd say it's part 'childhood experience', but I think he does not explore the aspect of 'values' enough. Perhaps a more useful way to understand differences between finance bros and my friends and I are that they value status more than freedom. At least through actions. This is stackranking again -- it's not like I think status doesn't matter nor would finance bros not value freedom. It's just that their spending habits optimize moreso for status than freedom. 
+But then why do people with quite different background converge to a similar answer to how to manage their money? People close to me seem have a similar approach to it (I do not think I overtly selected for this though). I'd say it's part 'childhood experience', but I think he does not explore the aspect of 'values' enough. Perhaps a more useful way to understand differences between finance bros and my friends and I are that they value status more than freedom. At least through actions. This is [stack ranking](dll110.github.io/poop/stack_rankings) again -- it's not like I think status doesn't matter nor would finance bros not value freedom. It's just that their spending habits optimize moreso for status than freedom. 
 
 ...
 
@@ -36,7 +36,7 @@ I encountered a real life, puzzling example not long afterwards. I caught up wit
 
 Perhaps some remarks I've received are relevant and I'm cold and (literally) calculating (I suspect it's related to how my emotional landscape is a lot calmer/less spikey than the average person's), so much that I have trouble understanding the average person? (But my friends are nice and warm and seem to understand better).
 
-I currently do not have a satisfying conclusion (you may tell me if I am overlooking something simple and obvious, but be warned that I have misplaced my common sense). But as usual, I will leave this on backburner and maybe over the next decade(s), I will stumble across a more useful perspective ([it happens, sometimes](dll110.github/poop/god)). 
+I currently do not have a satisfying conclusion (you may tell me if I am overlooking something simple and obvious, but be warned that I have misplaced my common sense -- actually I never quite received the complete version of it). But as usual, I will leave this on backburner and maybe over the next decade(s), I will stumble across a more useful perspective ([it happens, sometimes](dll110.github/poop/god)). 
 
 
 
